--- a/JAVASCRIPT/nuna-project/index.html
+++ b/JAVASCRIPT/nuna-project/index.html
@@ -10,6 +10,7 @@
     <h1>첫번째 프로젝트</h1>
     <ul>
       <li><a href="./number-guess-game/index.html">number-guess-game</a></li>
+      <li><a href="./TODOLIST/index.html">TODO-LIST</a></li>
     </ul>
   </body>
 </html>
